@@ -1,82 +1,75 @@
-## Game > GameAnvil > Test Development Guide > Getting Started
+## Game > GameAnvil > Guide to Test Development > Get Started
 
-## GameHammer
+### Number
 
-GameHammer is a powerful and easy-to-use game server development testing tool based on the GameAnvil engine. It provides all the features of an actual connector and the API that can be used for a variety of test cases. In addition, multiple GameHammers can be run for stress testing and aggregate the results and check them.
+GameHammer is a performance and feature test tool that can be used after developing a game server using the GameAnvil engine. It can be tested using all the features provided by the actual connector in the same way, and can be used as running multiple GameHammers at the same time for stress tests, etc. You can check and save the progress during the test process or take the test final result together.
 
-### System Requirements
+* Support all functions in the connector the same
+* Support both Sync/Async methods
+    * Provide API in the Async Method
+    * Provide Future for the Sync method
+* Allow you to use more than thousands of connections at the same time
+* Support status-based scenario management
 
-The following requirements must be met to use GameHammer. 
+This guide provides how to use GameHammer with detailed examples. It describes the use based on IntelliJ, like the server engine.
 
-- Supported Languages
-    - Java
-- Targeted Development Environment
-    - IntelliJ
-- Supported Network Protocols
-    - TCP/IP
-    - SSL over TCP/IP
-- Available Application Protocol Types
-    - Google Protocol Buffers
-    - Google FlatBuffers (Planned)
-    - Custom byte stream
-    - HTTP/HTTPS (Limited to specific uses)
+### Supported Environment and Protocol
 
-### Characteristics
+#### Supported Network Protocol
 
-GameHammer supports the following features.
+* TCP/IP
+* SSL over TCP/IP
 
-- Supports all the features for connector
-- Supports both sync and async mode
-    - Provides API in async mode
-    - Provides future for Sync mode
-- Thousands or more connections available concurrently
-- Supports the state-based scenario management feature
+#### Available Application Protocol Format
 
-### Reference project
+* Google Protocol Buffers
+* Custom Byte Stream
+* HTTP/HTTPS (only for specific purposes)
 
-| Server                                                         | Test Code                                                  | Description                                             |
-| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------ |
-| [sample-game-server](https://github.com/nhn/gameanvil.sample-game-server.git) | [sample-game-test](https://github.com/nhn/gameanvil.sample-game-test.git) | Test code using actual game server and GameHammer |
+### Add GameHammer Dependency to Project
 
-## Adding GameHammer to Project
+GameHammer is deployed via Maven, like GameAnvil. You can use GameHammer by adding the dependencies element in the pom.xml file as follows:
 
-GameHammer is deployed through Maven, just like GameAnvil. GameHammer is available by adding the following to the dependencies factor of pom.xml file.
-
-```
-... 
-<dependencies> 
-        ... 
-        <!-- GameHammer --> 
-        <dependency> 
-			<groupId>com.nhn.gameanvil</groupId> 
-			<artifactId>gamehammer</artifactId> 
-			<version>1.4.1-jdk11</version> 
-		</dependency> 
-        ... 
-<dependencies> 
-...        
+```pom
+<dependencies>
+       <!-- GameHammer -->
+       <dependency>
+			<groupId>com.nhn.gameanvil</groupId>
+			<artifactId>gamehammer</artifactId>
+			<version>2.1.0-jdk11</version>
+		</dependency>
+<dependencies>
 ```
 
-## Create GameHammer jar File with Maven
+### Create GameHammer jar file with Maven
 
-After creating a test scenario using GameHammer, you can create a jar file for the purpose of testing on the GameAnvil console. Here, you create a jar file for uploading via Maven.
+You can use GameHammer to create a jar file for the purpose of testing in the GameAnvil console after writing a test scenario.
 
-Run the command below in the directory where the pom.xml of the project you added GameHammer.
+Run the following command from the directory with pom.xml of the project with which GameHammer has been added:
 
 ```
 mvn package
 ```
 
-After the command is run, the build process is output and the last message that the build was successful is confirmed. If it shows as below, it's a success.
+After running the command, check the message to ensure that the build process is outgoing and that the build has been successful at the end. If you see the message below, it is a success:
 
 ```
-[INFO] ------------------------------------------------------------------------ 
-[INFO] BUILD SUCCESS 
-[INFO] ------------------------------------------------------------------------ 
-[INFO] Total time:  7.880 s 
-[INFO] Finished at: 2023-11-13T17:49:48+09:00 
-[INFO] ------------------------------------------------------------------------ 
+[INFO] ------------------------------------------------------------------------
+[INFO] BUILD SUCCESS
+[INFO] ------------------------------------------------------------------------
+[INFO] Total time:  7.880 s
+[INFO] Finished at: 2023-11-13T17:49:48+09:00
+[INFO] ------------------------------------------------------------------------
 Process finished with exit code 0
 ```
 
-You can check the build files within the newly created target directory.
+You can see the built files in the newly created target directory.
+
+### How to Remove Unnecessary Debug Log
+
+When GameHammer is executed, DEBUG level logs related to the internal Library may occur. There is no exception to the action, but if you want to remove these logs, add the following to the VMOption.
+
+```
+-Dio.netty.tryReflectionSetAccessible=true
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
